# AM-Engine

./: CMakeLists.txt  README.md
Release/: imgui.ini
contrib/: CMakeLists.txt
contrib/assimp/lib/: assimp-vc141-mtd.exp
contrib/imgui/: imgui_impl_opengl3.cpp
contrib/imgui/lib/: imgui.lib
contrib/jsoncpp/lib/: jsoncpp.lib
src/: CMakeLists.txt
src/AM_Engine/: AM_Engine.h  Application.cpp  Application.h  AssimpMesh.cpp  AssimpMesh.h  AssimpModel.cpp  AssimpModel.h  Camera.cpp  Camera.h  Component.cpp  Component.h  DebugUIManager.cpp  DebugUIManager.h  Entity.cpp  Entity.h  Environment.cpp  Environment.h  Exception.h  Input.cpp  Input.h  Lights.cpp  Lights.h  MasterRenderer.cpp  MasterRenderer.h  OutlineRenderer.cpp  OutlineRenderer.h  PBR_Material.cpp  PBR_Material.h  PointLight.h  PrimitiveShape.h  Renderer.cpp  Renderer.h  Resource.h  Resources.h  SaveManager.cpp  SaveManager.h  SceneManager.cpp  SceneManager.h  ShaderProgram.cpp  ShaderProgram.h  (+25 more)
src/Resources/Old_Antique_Standing_Globe_OBJ/: Old_Antique_Standing_Globe_.mtl
src/Resources/Textures/Cobblestone/: cobblestone.txt
src/Resources/Textures/forest_ground/: forest_ground.txt
src/Resources/Textures/grass/: grass.txt
src/Resources/Textures/metal_plate/: metal_plate.txt
src/Resources/backpack/: backpack.mtl
src/Resources/shaders/: NormalDebug.txt  TangentDebug.txt  brdf.frag  brdf.vert  deferredGeometryPass.frag  deferredGeometryPass.vert  deferredGeometryTerrain.frag  deferredGeometryTerrain.vert  deferredLightingPass.frag  hdrCube.frag  hdrCube.vert  irradiance.frag  pbrShader.txt  prefilter.frag  singleColor.frag  singleColor.vert  skybox.frag  skybox.vert  terrain.frag  terrain.vert  test.txt  water.frag  water.vert
src/Resources/shaders/vertFragFiles/: NormalDebug.vert  TangentDebug.frag  TangentDebug.vert  pbr - Non-irradiance.frag  pbr.frag  pbr.vert  pbr2.frag  pbr2.vert  test.frag  test.vert
src/game/: FirstPersonCameraControls.cpp  FirstPersonCameraControls.h  main.cpp
src/saves/: TestScene1.Json  save.Json
